force-app/main/default/objects/HDR_Enrolment__c/HDR_Enrolment__c.object-meta.xml
<CustomObject>
    <label>HDR Enrolment</label>
    <nameField>
        <displayFormat>HDR-{00000}</displayFormat>
        <label>HDR Enrolment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HDR Enrolments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>