force-app/main/default/objects/HDR_Enrolment__c/fields/I_RS_Actual_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Actual_Submission_Date__c</fullName>
    <label>Actual Submission Date</label>
    <type>Date</type>
</CustomField>