force-app/main/default/objects/HDR_Enrolment__c/fields/I_RS_Course_Admission_Stage_Desc__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Course_Admission_Stage_Desc__c</fullName>
    <formula>I_RS_Student_Course__r.I_ST_Course_Admission_Stage_Desc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Admission Stage Desc</label>
    <type>Text</type>
</CustomField>