force-app/main/default/objects/HDR_Enrolment__c/fields/I_RS_Degree_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Degree_Code__c</fullName>
    <formula>I_RS_Student_Course__r.I_ST_CourseAvailability__r.L_AD_Course_Availability_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Degree Code</label>
    <type>Text</type>
</CustomField>