force-app/main/default/objects/HDR_Enrolment__c/fields/I_RS_Degree_Title__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Degree_Title__c</fullName>
    <formula>I_RS_Student_Course__r.I_ST_Course_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Degree Title</label>
    <type>Text</type>
</CustomField>