force-app/main/default/objects/HDR_Enrolment__c/fields/I_RS_Expected_work_submission_date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Expected_work_submission_date__c</fullName>
    <label>Expected work submission date</label>
    <type>Date</type>
</CustomField>