force-app/main/default/objects/HDR_Enrolment__c/fields/I_RS_Field_of_Research__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Field_of_Research__c</fullName>
    <label>Field of Research</label>
    <length>20</length>
    <type>Text</type>
</CustomField>