force-app/main/default/objects/HDR_Enrolment__c/fields/I_RS_Field_of_Research_Description__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Field_of_Research_Description__c</fullName>
    <label>Field of Research Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>