force-app/main/default/objects/HDR_Enrolment__c/fields/I_RS_International__c.field-meta.xml
<CustomField>
    <fullName>I_RS_International__c</fullName>
    <formula>I_RS_Student__r.I_ST_International_Student__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indication of whether candidate is a international student on a student visa.</inlineHelpText>
    <label>International</label>
    <type>Checkbox</type>
</CustomField>