force-app/main/default/objects/HDR_Enrolment__c/fields/I_RS_Maximum_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Maximum_Completion_Date__c</fullName>
    <label>Maximum Completion Date</label>
    <type>Date</type>
</CustomField>