force-app/main/default/objects/HDR_Enrolment__c/fields/I_RS_Principal_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Principal_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Principal Supervisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HDR Enrolments (Principal Supervisor)</relationshipLabel>
    <relationshipName>HDR_Enrolments_Principal_Supervisor</relationshipName>
    <type>Lookup</type>
</CustomField>