force-app/main/default/objects/HDR_Enrolment__c/fields/I_RS_Select_Enrolment_Choice_Label__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Select_Enrolment_Choice_Label__c</fullName>
    <formula>I_RS_Degree_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>&apos;Select Enrolment&apos; Choice Label</label>
    <type>Text</type>
</CustomField>