force-app/main/default/objects/HDR_Enrolment__c/fields/I_RS_Student__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HDR Enrolments (Candidate)</relationshipLabel>
    <relationshipName>HDR_Enrolments_Candidate</relationshipName>
    <type>Lookup</type>
</CustomField>