force-app/main/default/objects/HDR_Enrolment__c/fields/I_RS_Student_Course__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Student_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will link to the Student Course against a Course Availability</description>
    <label>Student Course</label>
    <referenceTo>I_ST_Student_Course__c</referenceTo>
    <relationshipLabel>HDR Enrolments</relationshipLabel>
    <relationshipName>HDR_Enrolments</relationshipName>
    <type>Lookup</type>
</CustomField>