force-app/main/default/objects/HDR_Enrolment__c/fields/I_RS_Supervisory_College__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Supervisory_College__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>College for the school of principle supervisor</description>
    <label>Supervisory College</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>HDR Enrolments (College)</relationshipLabel>
    <relationshipName>HDR_Enrolments1</relationshipName>
    <type>Lookup</type>
</CustomField>