force-app/main/default/objects/HDR_Enrolment__c/fields/I_RS_Supervisory_School__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Supervisory_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>School of Principle Supervisor</description>
    <label>Supervisory School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>HDR Enrolments</relationshipLabel>
    <relationshipName>HDR_Enrolments</relationshipName>
    <type>Lookup</type>
</CustomField>