force-app/main/default/objects/HDR_Enrolment__c/fields/I_RS_Thesis_Title__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Thesis_Title__c</fullName>
    <label>Thesis Title</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>